fixed deleting derived table tree after using (BUG#1536)